@@ -2,37 +2,52 @@ package ru.nsu.dgi.department_assistant.domain.service.impl;
 
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.apache.commons.lang3.NotImplementedException;
-import org.springframework.http.ResponseEntity;
+import org.jetbrains.annotations.Nullable;
 import org.springframework.stereotype.Service;
 import ru.nsu.dgi.department_assistant.config.StepType;
+import ru.nsu.dgi.department_assistant.domain.dto.process.ConditionalExecutedDto;
+import ru.nsu.dgi.department_assistant.domain.dto.process.ProcessCancellationDto;
 import ru.nsu.dgi.department_assistant.domain.dto.process.ProcessExecutionRequestDto;
 import ru.nsu.dgi.department_assistant.domain.dto.process.ProcessExecutionStatusRequestDto;
 import ru.nsu.dgi.department_assistant.domain.dto.process.ProcessTemplateResponseDto;
 import ru.nsu.dgi.department_assistant.domain.dto.process.StepExecutedDto;
 import ru.nsu.dgi.department_assistant.domain.dto.process.StepStatusDto;
+import ru.nsu.dgi.department_assistant.domain.dto.process.SubstepExecutedDto;
+import ru.nsu.dgi.department_assistant.domain.dto.process.SubstepStatusDto;
+import ru.nsu.dgi.department_assistant.domain.dto.process.SubstepsInProcessStatusDto;
 import ru.nsu.dgi.department_assistant.domain.entity.employee.Employee;
 import ru.nsu.dgi.department_assistant.domain.entity.process.CommonTransition;
+import ru.nsu.dgi.department_assistant.domain.entity.process.ConditionalTransition;
 import ru.nsu.dgi.department_assistant.domain.entity.process.EmployeeAtProcess;
+import ru.nsu.dgi.department_assistant.domain.entity.process.ExecutionHistory;
+import ru.nsu.dgi.department_assistant.domain.entity.process.Step;
 import ru.nsu.dgi.department_assistant.domain.entity.process.StepStatus;
+import ru.nsu.dgi.department_assistant.domain.entity.process.Substep;
 import ru.nsu.dgi.department_assistant.domain.entity.process.SubstepStatus;
 import ru.nsu.dgi.department_assistant.domain.entity.process.id.EmployeeAtProcessId;
 import ru.nsu.dgi.department_assistant.domain.entity.process.id.StepStatusId;
+import ru.nsu.dgi.department_assistant.domain.entity.process.id.SubstepStatusId;
 import ru.nsu.dgi.department_assistant.domain.entity.process.id.TransitionId;
 import ru.nsu.dgi.department_assistant.domain.exception.EntityNotFoundException;
 import ru.nsu.dgi.department_assistant.domain.exception.InvalidStepExecutionException;
 import ru.nsu.dgi.department_assistant.domain.exception.ProcessExecutionStartException;
 import ru.nsu.dgi.department_assistant.domain.graph.ProcessGraph;
 import ru.nsu.dgi.department_assistant.domain.graph.ProcessGraphNode;
+import ru.nsu.dgi.department_assistant.domain.graph.stepdata.StartStepData;
 import ru.nsu.dgi.department_assistant.domain.graph.stepdata.SubtasksStepData;
 import ru.nsu.dgi.department_assistant.domain.repository.employee.EmployeeRepository;
 import ru.nsu.dgi.department_assistant.domain.repository.process.CommonTransitionRepository;
 import ru.nsu.dgi.department_assistant.domain.repository.process.ConditionalTransitionRepository;
 import ru.nsu.dgi.department_assistant.domain.repository.process.EmployeeAtProcessRepository;
+import ru.nsu.dgi.department_assistant.domain.repository.process.ExecutionHistoryRepository;
+import ru.nsu.dgi.department_assistant.domain.repository.process.FinalTypeRepository;
+import ru.nsu.dgi.department_assistant.domain.repository.process.ProcessTransitionRepository;
 import ru.nsu.dgi.department_assistant.domain.repository.process.StepStatusRepository;
+import ru.nsu.dgi.department_assistant.domain.repository.process.SubstepRepository;
 import ru.nsu.dgi.department_assistant.domain.repository.process.SubstepStatusRepository;
 import ru.nsu.dgi.department_assistant.domain.service.ProcessExecutionService;
 import ru.nsu.dgi.department_assistant.domain.service.ProcessGraphService;
+import ru.nsu.dgi.department_assistant.domain.service.ProcessSavingService;
 import ru.nsu.dgi.department_assistant.domain.service.ProcessTemplateService;
 
 import java.time.LocalDate;
@@ -47,6 +62,7 @@ public class ProcessExecutionServiceImpl implements ProcessExecutionService {
 
     private final ProcessTemplateService processTemplateService;
     private final ProcessGraphService processGraphService;
+    private final ProcessSavingService processSavingService;
 
     private final EmployeeAtProcessRepository employeeAtProcessRepository;
     private final StepStatusRepository stepStatusRepository;
@@ -54,40 +70,128 @@ public class ProcessExecutionServiceImpl implements ProcessExecutionService {
     private final EmployeeRepository employeeRepository;
     private final CommonTransitionRepository commonTransitionRepository;
     private final ConditionalTransitionRepository conditionalTransitionRepository;
+    private final FinalTypeRepository finalTypeRepository;
+    private final SubstepRepository substepRepository;
+    private final ProcessTransitionRepository processTransitionRepository;
+
+    private final ExecutionHistoryRepository executionHistoryRepository;
 
     @Transactional
     @Override
     public void startForEmployee(ProcessExecutionRequestDto request) {
+        LocalDate deadline = request.deadline();
         EmployeeAtProcessId id = new EmployeeAtProcessId(request.employeeId(), request.processId());
         if (employeeAtProcessRepository.existsById(id)) {
             throw new ProcessExecutionStartException(request.employeeId(), request.processId());
         }
-        employeeAtProcessRepository.save(new EmployeeAtProcess(request.employeeId(), request.processId(), null, LocalDate.now()));
+        employeeAtProcessRepository.save(new EmployeeAtProcess(request.employeeId(), request.processId(), null,
+                LocalDate.now(), deadline));
         ProcessTemplateResponseDto process = processTemplateService.getProcessById(request.processId());
         ProcessGraph graph = processGraphService.buildGraph(process.id(), process.name(), process.steps());
-        markAsStarted(request.employeeId(), request.processId(), graph, request.deadline());
+        markAsStarted(request.employeeId(), request.processId(), request.processId(), graph.start(),
+                graph, deadline);
     }
 
     @Transactional
     @Override
-    public void executeCommonStep(UUID employeeId, StepExecutedDto dto) {
-        var employeeAtProcessId = new EmployeeAtProcessId(dto.employeeId(), dto.processId());
+    public void cancel(ProcessCancellationDto request) {
+        EmployeeAtProcessId employeeAtProcessId = new EmployeeAtProcessId(request.employeeId(),
+                request.processId());
+        employeeAtProcessRepository.deleteById(employeeAtProcessId);
+    }
+
+    @Transactional
+    @Override
+    public void executeCommonStep(StepExecutedDto dto) {
+        var employeeAtProcessId = new EmployeeAtProcessId(dto.employeeId(), dto.startProcessId());
         if (!employeeAtProcessRepository.existsById(employeeAtProcessId)) {
-            throw new InvalidStepExecutionException(dto.stepId(), dto.processId());
+            throw new InvalidStepExecutionException();
         }
-        StepStatusId stepStatusId = new StepStatusId(employeeId, dto.processId(), dto.stepId());
-        StepStatus stepStatus = stepStatusRepository.findById(stepStatusId).orElseThrow();
+        var stepStatusId = new StepStatusId(dto.employeeId(), dto.startProcessId(), dto.processId(), dto.stepId());
+        StepStatus stepStatus = stepStatusRepository.findById(stepStatusId).orElseThrow(
+                InvalidStepExecutionException::new
+        );
         if (stepStatus.getStep().getType() != StepType.COMMON.getValue()) {
-            throw new InvalidStepExecutionException(dto.stepId(), dto.processId());
+            throw new InvalidStepExecutionException();
         }
-        if (!possibleToComplete(stepStatus)) {
-            throw new InvalidStepExecutionException(dto.stepId(), dto.processId());
-        }
+        checkIfPossibleToComplete(stepStatus);
+
         LocalDate completedAt = LocalDate.now();
         stepStatus.setCompletedAt(completedAt);
         stepStatus.setIsSuccessful(true);
         stepStatusRepository.save(stepStatus);
         completeNextIfFinalOrTransition(stepStatus);
+    }
+
+    @Transactional
+    @Override
+    public void executeSubstep(SubstepExecutedDto dto) {
+        var employeeAtProcessId = new EmployeeAtProcessId(dto.employeeId(), dto.startProcessId());
+        if (!employeeAtProcessRepository.existsById(employeeAtProcessId)) {
+            throw new InvalidStepExecutionException();
+        }
+
+        SubstepStatusId substepStatusId = new SubstepStatusId(dto.employeeId(), dto.startProcessId(), dto.substepId());
+        SubstepStatus substepStatus = substepStatusRepository.findById(substepStatusId)
+                .orElseThrow(InvalidStepExecutionException::new);
+        if (substepStatus.isCompleted()) {
+            throw new InvalidStepExecutionException();
+        }
+        Step step = substepStatus.getSubstep().getStep();
+        StepStatusId stepStatusId = new StepStatusId(dto.employeeId(), dto.startProcessId(),
+                step.getProcessId(), step.getId());
+        StepStatus stepStatus = stepStatusRepository.findById(stepStatusId)
+                .orElseThrow(InvalidStepExecutionException::new);
+        checkIfPossibleToComplete(stepStatus);
+
+        substepStatus.setCompleted(true);
+        substepStatusRepository.save(substepStatus);
+        if (otherSubstepsAreCompleted(substepStatus)) {
+            stepStatus.setCompletedAt(LocalDate.now());
+            stepStatus.setIsSuccessful(true);
+            stepStatusRepository.save(stepStatus);
+            completeNextIfFinalOrTransition(stepStatus);
+        }
+    }
+
+    @Transactional
+    @Override
+    public void executeConditional(ConditionalExecutedDto dto) {
+        var employeeAtProcessId = new EmployeeAtProcessId(dto.employeeId(), dto.startProcessId());
+        EmployeeAtProcess employeeAtProcess = employeeAtProcessRepository.findById(employeeAtProcessId)
+                .orElseThrow(InvalidStepExecutionException::new);
+        var stepStatusId = new StepStatusId(dto.employeeId(), dto.startProcessId(), dto.processId(), dto.stepId());
+        StepStatus stepStatus = stepStatusRepository.findById(stepStatusId).orElseThrow(
+                InvalidStepExecutionException::new
+        );
+        if (stepStatus.getStep().getType() != StepType.CONDITIONAL.getValue()) {
+            throw new InvalidStepExecutionException();
+        }
+        checkIfPossibleToComplete(stepStatus);
+        stepStatus.setCompletedAt(LocalDate.now());
+        stepStatus.setIsSuccessful(dto.successful());
+
+        var transitionId = new TransitionId(stepStatus.getStepId(), stepStatus.getProcessId());
+        ConditionalTransition transition = conditionalTransitionRepository.findById(transitionId)
+                .orElseThrow(() -> new EntityNotFoundException(transitionId.toString()));
+
+        int nextStepId = dto.successful() ? transition.getPositiveStepId() : transition.getNegativeStepId();
+        ProcessGraph graph = processSavingService.loadTemplate(dto.processId());
+        markAsStarted(dto.employeeId(), dto.startProcessId(), dto.processId(), nextStepId, graph,
+                employeeAtProcess.getDeadline());
+        completeNextIfFinalOrTransition(stepStatus, nextStepId);
+    }
+
+    private boolean otherSubstepsAreCompleted(SubstepStatus substepStatus) {
+        Step originalStep = substepStatus.getSubstep().getStep();
+        List<Substep> allSubsteps = substepRepository.findAllByStep(originalStep);
+        return allSubsteps.stream().allMatch(substep -> {
+            SubstepStatusId statusId = new SubstepStatusId(substepStatus.getEmployeeId(),
+                    substepStatus.getStartProcessId(), substep.getId());
+            SubstepStatus status = substepStatusRepository.findById(statusId)
+                    .orElseThrow(InvalidStepExecutionException::new);
+            return status.isCompleted();
+        });
     }
 
     @Override
@@ -98,49 +202,81 @@ public class ProcessExecutionServiceImpl implements ProcessExecutionService {
         }
         return stepStatusRepository.findByEmployeeAndStartProcess(request.employeeId(), request.processId()).stream()
                 .map(status -> new StepStatusDto(
+                        status.getEmployeeId(),
+                        status.getProcessId(),
                         status.getStepId(),
                         status.getStartProcessId(),
                         status.getDeadline(),
                         status.getCompletedAt(),
                         status.getIsSuccessful()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    @Override
+    public List<SubstepsInProcessStatusDto> getSubstepsStatuses(ProcessExecutionStatusRequestDto request) {
+        return substepStatusRepository.findAllByEmployeeAndStartProcess(
+                request.employeeId(), request.processId()).stream()
+                .collect(Collectors.groupingBy(s -> s.getSubstep().getStep().getStepId())).entrySet().stream()
+                .map(entry -> new SubstepsInProcessStatusDto(entry.getKey().getProcessId(), entry.getKey().getId(),
+                        entry.getValue().stream().map(s -> new SubstepStatusDto(s.getSubstepId(),
+                                s.isCompleted())).toList()))
+                .toList();
+    }
+
 
     private void completeNextIfFinalOrTransition(StepStatus stepStatus) {
         TransitionId transitionId = new TransitionId(stepStatus.getStepId(), stepStatus.getProcessId());
         CommonTransition transition = commonTransitionRepository.findById(transitionId).orElseThrow();
-        StepStatusId nextStepStatusId = new StepStatusId(stepStatus.getEmployeeId(), stepStatus.getProcessId(),
-                transition.getNextStepId());
+        completeNextIfFinalOrTransition(stepStatus, transition.getNextStepId());
+    }
+
+    private void completeNextIfFinalOrTransition(StepStatus stepStatus, int nextStepId) {
+        StepStatusId nextStepStatusId = new StepStatusId(stepStatus.getEmployeeId(), stepStatus.getStartProcessId(),
+                stepStatus.getProcessId(), nextStepId);
         StepStatus nextStepStatus = stepStatusRepository.findById(nextStepStatusId).orElseThrow();
         if (nextStepStatus.getStep().getType() == StepType.FINAL.getValue()) {
-            completeFinal(nextStepStatus);
+            var finalType = finalTypeRepository.findById(new TransitionId(nextStepStatus.getStepId(),
+                    nextStepStatus.getProcessId())).orElseThrow();
+            completeFinal(nextStepStatus, finalType.isSuccessful());
         } else if (nextStepStatus.getStep().getType() == StepType.TRANSITION.getValue()) {
-            completeTransition(nextStepStatus);
+            var processTransition = processTransitionRepository.findById(new TransitionId(nextStepStatus.getStepId(),
+                    nextStepStatus.getProcessId())).orElseThrow();
+            completeTransition(nextStepStatus, processTransition.getNextProcessId());
         }
     }
 
-    private void completeFinal(StepStatus stepStatus) {
-        stepStatus.setCompletedAt(LocalDate.now());
-        stepStatusRepository.save(stepStatus);
-        // TODO: cleanup + history
+    private void completeFinal(StepStatus stepStatus, boolean isSuccessful) {
+        LocalDate completedAt = LocalDate.now();
+        EmployeeAtProcessId employeeAtProcessId = new EmployeeAtProcessId(stepStatus.getEmployeeId(),
+                stepStatus.getStartProcessId());
+        EmployeeAtProcess employeeAtProcess = employeeAtProcessRepository.findById(employeeAtProcessId).orElseThrow(
+                InvalidStepExecutionException::new);
+        LocalDate startedAt = employeeAtProcess.getStartedAt();
+        ExecutionHistory history = new ExecutionHistory(UUID.randomUUID(), stepStatus.getEmployeeId(),
+                stepStatus.getStartProcessId(), startedAt, completedAt, isSuccessful, null, null);
+        employeeAtProcessRepository.delete(employeeAtProcess);
+        executionHistoryRepository.save(history);
     }
 
-    private void completeTransition(StepStatus stepStatus) {
+    private void completeTransition(StepStatus stepStatus, UUID nextProcessId) {
         stepStatus.setCompletedAt(LocalDate.now());
         stepStatusRepository.save(stepStatus);
-        // TODO: add subprocess steps
+        ProcessTemplateResponseDto nextProcess = processTemplateService.getProcessById(nextProcessId);
+        var graph = processGraphService.buildGraph(nextProcessId, nextProcess.name(), nextProcess.steps());
+        markAsStarted(stepStatus.getEmployeeId(), stepStatus.getStartProcessId(), nextProcessId, graph.start(),
+                graph, stepStatus.getEmployeeAtProcess().getDeadline());
     }
 
-    private boolean possibleToComplete(StepStatus stepStatus) {
+    private void checkIfPossibleToComplete(StepStatus stepStatus) {
         if (stepStatus.getCompletedAt() != null) {
-            return false;
+            throw new InvalidStepExecutionException();
         }
         long completedPrevCommons = commonTransitionRepository.findByNextInProcess(stepStatus.getProcessId(),
                 stepStatus.getStepId()).stream()
                 .map(transition -> {
-                    StepStatusId stepStatusId = new StepStatusId(stepStatus.getEmployeeId(), stepStatus.getProcessId(),
-                            transition.getStepId());
+                    StepStatusId stepStatusId = new StepStatusId(stepStatus.getEmployeeId(),
+                            stepStatus.getStartProcessId(), stepStatus.getProcessId(), transition.getStepId());
                     return stepStatusRepository.findById(stepStatusId);
                 })
                 .filter(Optional::isPresent)
@@ -151,8 +287,8 @@ public class ProcessExecutionServiceImpl implements ProcessExecutionService {
         long completedPrevConditionals = conditionalTransitionRepository.findByNextInProcess(stepStatus.getProcessId(),
                 stepStatus.getStepId()).stream()
                 .map(transition -> {
-                    StepStatusId stepStatusId = new StepStatusId(stepStatus.getEmployeeId(), stepStatus.getProcessId(),
-                            transition.getStepId());
+                    StepStatusId stepStatusId = new StepStatusId(stepStatus.getEmployeeId(),
+                            stepStatus.getStartProcessId(), stepStatus.getProcessId(), transition.getStepId());
                     return stepStatusRepository.findById(stepStatusId);
                 })
                 .filter(Optional::isPresent)
@@ -160,29 +296,40 @@ public class ProcessExecutionServiceImpl implements ProcessExecutionService {
                 .filter(status -> status.getCompletedAt() != null)
                 .count();
 
-        return completedPrevCommons != 0 || completedPrevConditionals != 0;
+        if (completedPrevCommons == 0 && completedPrevConditionals == 0) {
+            throw new InvalidStepExecutionException();
+        }
     }
 
-    private void markAsStarted(UUID employeeId, UUID processId, ProcessGraph graph, LocalDate deadline) {
+    private void markAsStarted(UUID employeeId, UUID startProcessId, UUID processId, int stepId, ProcessGraph graph,
+                               @Nullable LocalDate deadline) {
         Employee employee = employeeRepository.findById(employeeId)
                 .orElseThrow(() -> new EntityNotFoundException(employeeId.toString()));
-        LocalDate startDate = deadline != null ? deadline.minusDays(graph.duration()) : null;
-        markAsStartedImpl(employee, processId, graph, graph.root(), startDate);
+        int duration = processGraphService.calculateDurationStartingFrom(graph, stepId);
+        LocalDate startDate = deadline != null ? deadline.minusDays(duration) : null;
+        markAsStartedImpl(employee, startProcessId, processId, graph, stepId, startDate);
     }
 
-    private void markAsStartedImpl(Employee employee, UUID processId, ProcessGraph graph, int nodeId, LocalDate startDate) {
+    private void markAsStartedImpl(Employee employee, UUID startProcessId, UUID processId, ProcessGraph graph,
+                                   int nodeId, @Nullable LocalDate startDate) {
         ProcessGraphNode node = graph.getNode(nodeId);
         LocalDate endDate = startDate != null ? startDate.plusDays(node.getDuration()) : null;
 
-        StepStatus stepStatus = new StepStatus(employee.getId(), processId, node.getId(), processId, endDate, null, null);
+        StepStatus stepStatus = new StepStatus(employee.getId(), processId, node.getId(), startProcessId, endDate, null, null);
+        if (node.getData() instanceof StartStepData) {
+            stepStatus.setCompletedAt(LocalDate.now());
+        }
         stepStatusRepository.save(stepStatus);
         if (node.getData() instanceof SubtasksStepData d) {
             d.getSubtasks().forEach(task -> {
-                SubstepStatus substepStatus = new SubstepStatus(employee.getId(), task.id(),
+                SubstepStatus substepStatus = new SubstepStatus(employee.getId(), startProcessId, task.id(),
                         false, null, null);
                 substepStatusRepository.save(substepStatus);
             });
         }
-        node.next().forEach(nextId -> markAsStartedImpl(employee, processId, graph, nextId, endDate));
+        // We don't calculate deadlines if we don't know yet the way we'll actually go
+        if (node.next().size() <= 1) {
+            node.next().forEach(nextId -> markAsStartedImpl(employee, startProcessId, processId, graph, nextId, endDate));
+        }
     }
 }
